--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,1 +1,10 @@
-<h2>{{ hero.name | uppercase }}</h2>
+<h2>{{ heroName | uppercase }} Details</h2>
+
+<div>
+    <span>id: {{ hero.id }}</span>
+</div>
+
+<div>
+    <label for="hero">Hero Name</label>
+    <input [(ngModel)]="heroName" type="text" name="hero">
+</div>
