--- a/src/styles.css
+++ b/src/styles.css
@@ -1,44 +1,99 @@
+@import '@angular/cdk/overlay-prebuilt.css';
+
 /* Application-wide Styles */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 h1 {
-    color: #369;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
-  }
-  h2, h3 {
-    color: #444;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-  }
-  body {
-    margin: 2em;
-  }
-  body, input[type="text"], button {
-    color: #333;
-    font-family: Cambria, Georgia, serif;
-  }
-  button {
-    background-color: #eee;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    color: black;
-    font-size: 1.2rem;
-    padding: 1rem;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-  }
-  button:hover {
-    background-color: black;
-    color: white;
-  }
-  button:disabled {
-    background-color: #eee;
-    color: #aaa;
-    cursor: auto;
-  }
-  
-  /* everywhere else */
-  * {
-    font-family: Arial, Helvetica, sans-serif;
-  }
+color: #369;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 250%;
+}
+h2, h3 {
+color: #444;
+font-family: Arial, Helvetica, sans-serif;
+font-weight: lighter;
+}
+body {
+margin: 2em;
+}
+body, input[type="text"], button {
+color: #333;
+font-family: Cambria, Georgia, serif;
+}
+button {
+background-color: #eee;
+border: none;
+border-radius: 4px;
+cursor: pointer;
+color: black;
+font-size: 1.2rem;
+padding: 1rem;
+margin-right: 1rem;
+margin-bottom: 1rem;
+margin-top: 1rem;
+}
+button:hover {
+background-color: black;
+color: white;
+}
+button:disabled {
+background-color: #eee;
+color: #aaa;
+cursor: auto;
+}
+
+/* everywhere else */
+* {
+font-family: Arial, Helvetica, sans-serif;
+}
+
+:root {
+--font-sans: ''
+}
+
+:root {
+--background: 0 0% 100%;
+--foreground: 222.2 84% 4.9%;
+--muted: 210 40% 96.1%;
+--muted-foreground: 215.4 16.3% 46.9%;
+--popover: 0 0% 100%;
+--popover-foreground: 222.2 84% 4.9%;
+--card: 0 0% 100%;
+--card-foreground: 222.2 84% 4.9%;
+--border: 214.3 31.8% 91.4%;
+--input: 214.3 31.8% 91.4%;
+--primary: 222.2 47.4% 11.2%;
+--primary-foreground: 210 40% 98%;
+--secondary: 210 40% 96.1%;
+--secondary-foreground: 222.2 47.4% 11.2%;
+--accent: 210 40% 96.1%;
+--accent-foreground: 222.2 47.4% 11.2%;
+--destructive: 0 84.2% 60.2%;
+--destructive-foreground: 210 40% 98%;
+--ring: 222.2 84% 4.9%;
+--radius: 0.5rem;
+}
+
+.dark {
+--background: 222.2 84% 4.9%;
+--foreground: 210 40% 98%;
+--muted: 217.2 32.6% 17.5%;
+--muted-foreground: 215 20.2% 65.1%;
+--popover: 222.2 84% 4.9%;
+--popover-foreground: 210 40% 98%;
+--card: 222.2 84% 4.9%;
+--card-foreground: 210 40% 98%;
+--border: 217.2 32.6% 17.5%;
+--input: 217.2 32.6% 17.5%;
+--primary: 210 40% 98%;
+--primary-foreground: 222.2 47.4% 11.2%;
+--secondary: 217.2 32.6% 17.5%;
+--secondary-foreground: 210 40% 98%;
+--accent: 217.2 32.6% 17.5%;
+--accent-foreground: 210 40% 98%;
+--destructive: 0 62.8% 30.6%;
+--destructive-foreground: 210 40% 98%;
+--ring: 212.7 26.8% 83.9;
+}
