--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <h1 class="text-3xl font-bold">{{ title }}</h1>
-<app-heroes></app-heroes>
+<button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
+    Dashboard
+</button>
+<button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded" routerLinkActive="active">
+    <a routerLink="/heroes">Heroes</a>
+</button>
+<router-outlet></router-outlet>
