--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,10 +1,14 @@
-<h2>{{ heroName | uppercase }} Details</h2>
+<h2>My Heroes</h2>
 
-<div>
-    <span>id: {{ hero.id }}</span>
-</div>
+<ul *ngFor="let hero of heroes; index as i">
+    <li>
+        <a routerLink="/hero-details">
+            <span>{{ hero.id }}</span>
+            <span>{{ hero.name }}</span>
+        </a>
+    </li>
+</ul>
 
-<div>
-    <label for="hero">Hero Name</label>
-    <input [(ngModel)]="heroName" type="text" name="hero">
-</div>
+<button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
+    <a (click)="onBack()">Back</a>
+</button>
